@@ -1,1 +1,1 @@
-rpodder, podcast catching written in Ruby
+rpodder, podcast catching client written in Ruby, version 0.0.1
